# parallel_computing

./: .gitignore  README.md  main.cpp
arr_parallel_sum/: main.cpp
bubble_sort/: main.cpp
det_square_matrix/: CMakeLists.txt  main.cpp  matrix3x3.txt  matrix4x4.txt  matrix5x5.txt  matrix6x6.txt  matrix7x7.txt  matrix8x8.txt
distributed_matrix_multiplication/: main.cpp
distributed_summation/: CMakeLists.txt  main.cpp
factorial_number/: CMakeLists.txt  main.cpp
game_life/: CMakeLists.txt  main.cpp
int_rectangle_method/: CMakeLists.txt  main.cpp
mandelbrot_fractal/: CMakeLists.txt  main.cpp
matrix_vector_mult/: CMakeLists.txt  main.cpp
parallel_haar_cascades/: CMakeLists.txt  main.cpp
parallel_matrix_multiplication/: CMakeLists.txt  main.cpp
race_condition/: CMakeLists.txt  main.cpp
serpinsky_carpet/: CMakeLists.txt  main.cpp
